--- a/_posts/2015-11-11-video.md
+++ b/_posts/2015-11-11-video.md
@@ -9,15 +9,19 @@ permalink: video
 ## The future of our cities and towns lies in… Open Data
 Laurenellen McCann talks at TEDxMidAtlantic on the topic of smart cities and open data.
 
+{% raw %}
+<iframe width=“560” height=“315” src=“https://www.youtube.com/embed/qy9wQyxdZ2I” frameborder=“0” allowfullscreen></iframe>
+{% endraw %}
+
 Speaker : Laurenellen McCann
 Length : 7:30
-
-<iframe width=“560” height=“315” src=“https://www.youtube.com/embed/qy9wQyxdZ2I” frameborder=“0” allowfullscreen></iframe>
 
 ## Open data changes lives 
 An inspirational talk at TEDxUCLA about how open data can be used to build products and services - several actual project example provided.
 
+{% raw %}
 <iframe width=“560” height=“315” src=“https://www.youtube.com/embed/ThM6umznsWM” frameborder=“0” allowfullscreen></iframe>
+{% endraw %}
 
 Speaker : Jeanne Holm 
 Length : 17:47
@@ -25,7 +29,9 @@ Length : 17:47
 ## Open Data - why it is better to know than not to know? 
 By giving a basic introduction to open data, the Tim Berners-Lee 5 star rating system and more, Alicia Peszkfowska invites you to use open data and build solutions to improve data everyday life.
 
+{% raw %}
 <iframe width=“560” height=“315” src=“https://www.youtube.com/embed/90cEIbqT9hg” frameborder=“0” allowfullscreen></iframe>
+{% endraw %}
 
 Speaker : Alicia Peszkfowska
 Length : 11:03
@@ -33,7 +39,9 @@ Length : 11:03
 ## The year open data went worldwide
 The legendary Tim Berners-Lee gives a follow up talk to his call for “raw data now” in 2009. He discusses how open data has evolved from the time he gave that talk to the TED University in 2010.
 
+{% raw %}
 <iframe src=“https://embed-ssl.ted.com/talks/tim_berners_lee_the_year_open_data_went_worldwide.html” width=“560” height=“315” frameborder=“0” scrolling=“no” webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+{% endraw %}
 
 Speaker : Tim Berners-Lee
 Length : 5:26
@@ -41,7 +49,9 @@ Length : 5:26
 ## Open Data Means Better Science
 At University of Minho Open Access Seminar & [OpenAIRE][1] Interoperability Workshop, Jenny Molloy discusses open data in the context of scientific research.
 
+{% raw %}
 <iframe src=“https://player.vimeo.com/video/59474174” width=“500” height=“400” frameborder=“0” webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+{% endraw %}
 
 Speaker : Jenny Molloy
 Length : 22:17
@@ -49,7 +59,9 @@ Length : 22:17
 ## World Bank Open Data
 In an informal atmosphere several speakers talk about [open data provided by the World Bank][2]. Topics range from datasets to implementation and use. Please note that the talks are mostly very technical.
 
+{% raw %}
 <iframe src=“https://player.vimeo.com/video/11843682” width=“500” height=“375” frameborder=“0” webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+{% endraw %}
 
 Speaker : Jeff McCoy, Frank Febbraro, Alex Barth, Michael Benedict
 Length:21:36
@@ -57,7 +69,9 @@ Length:21:36
 ## A Case for Open Data in Transit
 Instead of a talk, this is a short film by [Street films][3] on the topic of open data in transportation.
 
+{% raw %}
 <iframe src=“https://player.vimeo.com/video/13764646?color=9086c0” width=“500” height=“281” frameborder=“0” webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+{% endraw %}
 
 Length : 6:11
 Speaker : various
