--- a/_posts/2016-01-06-pause.md
+++ b/_posts/2016-01-06-pause.md
@@ -12,13 +12,6 @@ Initially, this approach seemed to work fine, however soon there were issues. Si
 
 I know I could have done better. On the other hand, I could have done nothing; much like with countless projects which are stuck, permanently on hold. I am glad I did not wait for perfection, but rather decided to [iterate in public][1]. I am proud of the results. For 3 months I managed to write a post each week and let me tell you, writing regularly with a few hours of time to spare (at most) is far more difficult than it seems. 
 
-For the next two months, that is January and February, my schedule is almost fully booked. That is why __I decided to put this project on pause__. I want to give it the attention it deserves or move on. If I determine I want to continue I would like to do the following beforehand:
-- have a buffer or pre-written posts
-- set up reserved, scheduled time for working on this project
-- add featured images to all my posts
-- convert some images to HTML
-- come up with a content promotion strategy
-
-All in all I am glad I started _Open data pro_ and invite you to __check back on the 3rd of March 2016__ when I will announce my decision in regard to continuing the project.
+All in all I am glad I started _Open data pro_ and the lessons I learned along the way. For now however, I have to take a pause. Hopefully I will have the time and resources to work on this project again in future, in the meantime enjoy the open data out there and consider being a provider.
 
 [1]: http://www.opendatapro.com/iterating-in-public
